[package]
name = "Agent"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.30"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
once_cell = "1.19"
pnet = "0.34"
systemd = "0.7"
regex = "1"
dns-parser = "0.8"
